--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">to the only person I'd share my fries with! ;) 🌻</h5>
       </div>
     </div>
     <div class="seven">
@@ -81,13 +81,6 @@
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
       </div>
     </div>
     <div class="eight">
